# monopoly

./: CMakeLists.txt  README.md
include/: AField.hpp  AIPlayerMonopolist.hpp  AIPlayerRandom.hpp  AwardField.hpp  BoardIterator.hpp  Boards.hpp  ConsoleDecision.hpp  DecisionMakyr.hpp  DepositField.hpp  Dice.hpp  DiceCup.hpp  Game.hpp  GameBoard.hpp  IDie.hpp  IPlayer.hpp  MonopolistDecision.hpp  PenaltyField.hpp  Player.hpp  PlayerInformation.hpp  PrisonField.hpp  PropertyField.hpp  RandomDecision.hpp  StartField.hpp  UIInterface.hpp
src/: AField.cpp  AIPlayerMonopolist.cpp  AIPlayerRandom.cpp  AwardField.cpp  BoardIterator.cpp  ConsoleDecision.cpp  DepositField.cpp  Dice.cpp  DiceCup.cpp  Game.cpp  GameBoard.cpp  MonopolistDecision.cpp  PenaltyField.cpp  Player.cpp  PrisonField.cpp  PropertyField.cpp  RandomDecision.cpp  StartField.cpp  UIInterface.cpp  main.cpp
test/: firstTest.cpp
